[tool.poetry]
name = "module-compsci-python"
version = "0.1.0"
description = ""
authors = ["IonBir <ion.birsu@softwire.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
start = "src:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
